Fixed bar chart too short in height

--- a/src/css/DriverComparison.css
+++ b/src/css/DriverComparison.css
@@ -19,7 +19,7 @@
 
 .bar-chart {
     width: 45%;
-    height: 700px;
+    height: 800px;
     /* min-width: 400px; */
 
     margin: 0 auto;
