--- a/src/index.css
+++ b/src/index.css
@@ -35,10 +35,6 @@ a:hover {
   color: #535bf2;
 }
 
-a.am5exporting-icon {
-  background: #ffffff;
-}
-
 body {
   margin: 0;
   display: flex;
